[metadata]
description = Program/Package to ...
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    python
    utilities
platforms = any
project_urls =
    Bug Tracker=https://github.com/FlorianMF/python-utils/issues
    Source Code=https://github.com/FlorianMF/python-utils
classifiers =
    Environment :: Console
    Natural Language :: English
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Python
    Topic :: Scientific/Engineering :: Utilities
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE
description-file = README.md

[options]
packages = find:
include_package_data = True
zip_safe = False
setup_requires =

python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    tests/*
    benchmarks
    docs

[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci
    .circleci/*

[bdist_wheel]
universal = true

[coverage:run]
plugins = covdefaults

[coverage:report]
exclude_lines =
    pragma: no-cover
    warnings
    pass
    if __name__ == .__main__.:

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    # whitespace before ':'. Opposite convention enforced by black
    E203
    # missing whitespace after ',', ';', or ':'; for black
    E231
    # too many leading '#' for block comment
    E266
    # line too long. Handled by black, we have longer lines
    E501
    # Do not assign a lambda expression, use a def
    E731
    # Module imported but unused
    # F401
    # Local variable name is assigned to but never used
    F841
    # line break before binary operator, need for black
    W503
    # Line break occurred after a binary operator
    W504
    # Invalid escape sequence 'x'
    W605